needs final tweaks/fixes

--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -35,22 +35,23 @@
   </head>
   <body>
     <div class="card-body">
-      <div class="image">
-        <img
-          src="./images/image-header-desktop.jpg"
-          alt="image of Group Meeting"
-        />
-      </div>
-      <h1>Get insights that help your business grow.</h1>
-      <p>
-        Discover the benefits of data analytics and make better decisions
-        regarding revenue, customer experience, and overall efficiency.
-      </p>
-      <div class="stats">
-        <div class="boxes">
-          <div class="box">10k+ COMPANIES</div>
-          <div class="box">314 TEMPLATES</div>
-          <div class="box">12m+ QUERIES</div>
+      <div class="flex-container">
+        <div class="image">
+          <img
+            src="./images/image-header-desktop.jpg"
+            alt="image of Group Meeting"
+          />
+        </div>
+        <div class="blurb">
+          <h1>Get insights that help your business grow.</h1>
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+          <div class="boxes">
+          <div class="box"><p class="top">10k+</p><p class="bottom">COMPANIES</p></div>
+          <div class="box"><p class="top">314</p><p class="bottom">TEMPLATES</p></div>
+          <div class="box"><p class="top">12m+</p><p class="bottom">QUERIES</p></div>
         </div>
       </div>
     </div>
